--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "p-fatal",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Re-throw unhandled promise rejections in the next turn, so other listeners get a chance to also run.",
   "keywords": [
     "promise",
@@ -22,7 +22,7 @@
   "private": false, "license": "ISC",
 
   "main": "fatal.js",
-  "scripts": { "test": "bash test/why/why.sh" },
+  "scripts": { "test": "bash test/all.sh" },
   "directories": { "test": "test" },
 
   "dependencies": {},
