--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-pretty-pmb": "^1.0.5",
     "esm": "^3.2.25",
-    "perish": "^1.0.3"
+    "perish": "^1.0.3",
+    "read-all-stdin-sync": "^1.0.5"
   },
 
 
