--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "p-fatal",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Re-throw unhandled promise rejections in the next turn, so other listeners get a chance to also run.",
   "keywords": [
     "promise",
@@ -22,16 +22,20 @@
   "private": false, "license": "ISC",
 
   "main": "fatal.js",
-  "scripts": { "test": "bash test/all.sh" },
+  "scripts": { "test": "elp && bash test/all.sh" },
   "directories": { "test": "test" },
+  "eslintConfig": { "extends": "nodejs-pmb" },
 
   "dependencies": {},
   "devDependencies": {
-    "bluebird": "^3.5.1",
-    "esm": "^3.0.17",
-    "perish": "^1.0.2"
+    "eslint-config-nodejs-pmb": "^0.3.5",
+    "eslint-plugin-json-light-pmb": "^1.0.7",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-pretty-pmb": "^1.0.5",
+    "esm": "^3.2.25",
+    "perish": "^1.0.3"
   },
 
 
-  "npm vs. BOM = Unexpected token": "-*- coding: UTF-8 -*-"
+  "engines": { "npm": ">=7.0.0", "node": ">=16.0.0" }
 }
