--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 
   "dependencies": {},
   "devDependencies": {
+    "absdir": "^1.0.6",
     "eslint-config-nodejs-pmb": "^0.3.5",
     "eslint-plugin-json-light-pmb": "^1.0.7",
     "eslint-plugin-n": "^15.2.4",
